--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <script src="kitame.js">4</script>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -9,6 +9,17 @@
     <title>Document</title>
 </head>
 <body>
+<div class="containers">
+    <div class="boxes">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+    </div>
+    <div id="result">
+        <div class="winner"></div>
+    </div>
+</div>
 
+<script src="kitame.js"></script>
 </body>
 </html>
